# api/financeapp/apiviews.py
@@ -1,17 +1,24 @@
-from django.db.models import QuerySet
+from django.db.models import Count, QuerySet
 from django.http import HttpRequest
 from django_filters.rest_framework import DjangoFilterBackend
 from rest_framework import generics
 
 from financeapp import serializers
 from financeapp.filters import BankTransactionFilter
-from financeapp.models import BankAccount, BankTransaction
+from financeapp.models import BankAccount, BankTransaction, Tag
 
 
 def get_allowed_bank_accounts(request: HttpRequest) -> QuerySet[BankAccount]:
     if not request or not request.user or not request.user.is_authenticated:
         return BankAccount.objects.none()
     return BankAccount.objects.filter(account__in=request.user.account_set.all())
+
+
+class BankAccountListView(generics.ListAPIView):
+    serializer_class = serializers.BankAccountSerializer
+
+    def get_queryset(self):
+        return get_allowed_bank_accounts(self.request)
 
 
 class BankTransactionListView(generics.ListAPIView):
@@ -26,4 +33,16 @@ class BankTransactionListView(generics.ListAPIView):
             )
             .select_related("bank_account")
             .order_by("-date")
+        )
+
+
+class TagTypeListView(generics.ListAPIView):
+    serializer_class = serializers.TagTypeSerializer
+
+    def get_queryset(self):
+        return (
+            Tag.objects.filter(account__in=self.request.user.account_set.all())
+            .values("tag_type", "value")
+            .annotate(count=Count("tag_type"))
+            .order_by("tag_type")
         )
