# openapi.yaml
@@ -60,6 +60,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -105,6 +108,171 @@ paths:
           description: ''
       tags:
       - api
+  /api/finance/transactions/:
+    get:
+      operationId: listBankTransactions
+      description: ''
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      - name: bank_account
+        required: false
+        in: query
+        description: bank_account
+        schema:
+          type: string
+      - name: start
+        required: false
+        in: query
+        description: start
+        schema:
+          type: string
+      - name: end
+        required: false
+        in: query
+        description: end
+        schema:
+          type: string
+      - name: query
+        required: false
+        in: query
+        description: query
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                - count
+                - results
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=400&limit=100
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=200&limit=100
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/BankTransaction'
+          description: ''
+      tags:
+      - api
+  /api/finance/tag_type/:
+    get:
+      operationId: listTagTypes
+      description: ''
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                - count
+                - results
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=400&limit=100
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=200&limit=100
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/TagType'
+          description: ''
+      tags:
+      - api
+  /api/finance/bank_account/:
+    get:
+      operationId: listBankAccounts
+      description: ''
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                - count
+                - results
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=400&limit=100
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=200&limit=100
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/BankAccount'
+          description: ''
+      tags:
+      - api
   /api/projects/:
     get:
       operationId: listProjects
@@ -128,6 +296,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -175,7 +346,7 @@ paths:
       - api
   /api/projects/summary/:
     get:
-      operationId: listProjectSummarys
+      operationId: listProjectSummaries
       description: ''
       parameters:
       - name: limit
@@ -196,6 +367,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -335,6 +509,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -433,6 +610,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -846,6 +1026,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -927,6 +1110,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -1116,6 +1302,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -1279,6 +1468,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -1302,7 +1494,7 @@ paths:
       - api
   /api/companies/:
     get:
-      operationId: listCompanys
+      operationId: listCompanies
       description: ''
       parameters:
       - name: limit
@@ -1323,6 +1515,9 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                - count
+                - results
                 properties:
                   count:
                     type: integer
@@ -1586,6 +1781,83 @@ components:
       required:
       - content
       - contact
+    BankTransaction:
+      type: object
+      properties:
+        bank_account:
+          type: integer
+        transaction_id:
+          type: string
+          readOnly: true
+        date:
+          type: string
+          format: date-time
+          readOnly: true
+        amount:
+          type: integer
+          readOnly: true
+        balance:
+          type: integer
+          readOnly: true
+        source:
+          type: string
+          readOnly: true
+        description:
+          type: string
+          readOnly: true
+        transaction_type:
+          type: string
+          readOnly: true
+        tags:
+          type: array
+          items:
+            type: object
+            properties:
+              created_at:
+                type: string
+                format: date-time
+              rule:
+                type: integer
+              tag_type:
+                type: string
+              value:
+                type: string
+              meta:
+                type: object
+            required:
+            - created_at
+            - rule
+            - tag_type
+            - value
+      required:
+      - bank_account
+      - tags
+    TagType:
+      type: object
+      properties:
+        tag_type:
+          type: string
+        value:
+          type: string
+        count:
+          type: integer
+      required:
+      - tag_type
+      - value
+      - count
+    BankAccount:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        bank_name:
+          type: string
+      required:
+      - id
+      - name
+      - bank_name
     Project:
       type: object
       properties:
@@ -1658,6 +1930,9 @@ components:
               readOnly: true
             sequence_num:
               type: integer
+              maximum: 9223372036854775807
+              minimum: -9223372036854775808
+              format: int64
             project:
               type: integer
             created_at:
@@ -1668,6 +1943,7 @@ components:
               type: string
               format: date-time
               readOnly: true
+              nullable: true
             paid_at:
               type: string
               format: date-time
@@ -1747,6 +2023,9 @@ components:
           readOnly: true
         sequence_num:
           type: integer
+          maximum: 9223372036854775807
+          minimum: -9223372036854775808
+          format: int64
         project:
           type: integer
         created_at:
@@ -1757,6 +2036,7 @@ components:
           type: string
           format: date-time
           readOnly: true
+          nullable: true
         paid_at:
           type: string
           format: date-time
@@ -1930,6 +2210,7 @@ components:
           type: string
           format: date-time
           readOnly: true
+          nullable: true
         completed_at:
           type: string
           format: date-time
@@ -1987,6 +2268,9 @@ components:
                 readOnly: true
               sequence_num:
                 type: integer
+                maximum: 9223372036854775807
+                minimum: -9223372036854775808
+                format: int64
               project:
                 type: integer
               created_at:
@@ -1997,6 +2281,7 @@ components:
                 type: string
                 format: date-time
                 readOnly: true
+                nullable: true
               paid_at:
                 type: string
                 format: date-time
